--- a/01-6_Optimization.ipynb
+++ b/01-6_Optimization.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "47f92845",
+   "id": "0d262de4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "433f03f4",
+   "id": "4e7d1051",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e68dc0ed",
+   "id": "1d5e5c63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5cd34e10",
+   "id": "04830d6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4691ca82",
+   "id": "568ed81c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d74ae1e1",
+   "id": "dbc4c092",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "05162cfe",
+   "id": "da106479",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b1cd5b81",
+   "execution_count": 10,
+   "id": "3a1deb6b",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,149 @@
       "loss: 2.274231  [19200/60000]\n",
       "loss: 2.256566  [25600/60000]\n",
       "loss: 2.233011  [32000/60000]\n",
-      "loss: 2.236488  [38400/60000]\n"
+      "loss: 2.236488  [38400/60000]\n",
+      "loss: 2.206156  [44800/60000]\n",
+      "loss: 2.207147  [51200/60000]\n",
+      "loss: 2.179990  [57600/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 51.9%, Avg loss: 2.169818 \n",
+      "\n",
+      "Epoch 2\n",
+      "-------------------------------\n",
+      "loss: 2.178375  [    0/60000]\n",
+      "loss: 2.169594  [ 6400/60000]\n",
+      "loss: 2.113901  [12800/60000]\n",
+      "loss: 2.129227  [19200/60000]\n",
+      "loss: 2.091977  [25600/60000]\n",
+      "loss: 2.032206  [32000/60000]\n",
+      "loss: 2.063269  [38400/60000]\n",
+      "loss: 1.985282  [44800/60000]\n",
+      "loss: 1.987454  [51200/60000]\n",
+      "loss: 1.935081  [57600/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 59.5%, Avg loss: 1.920018 \n",
+      "\n",
+      "Epoch 3\n",
+      "-------------------------------\n",
+      "loss: 1.948854  [    0/60000]\n",
+      "loss: 1.925099  [ 6400/60000]\n",
+      "loss: 1.808358  [12800/60000]\n",
+      "loss: 1.843313  [19200/60000]\n",
+      "loss: 1.759524  [25600/60000]\n",
+      "loss: 1.696468  [32000/60000]\n",
+      "loss: 1.725259  [38400/60000]\n",
+      "loss: 1.618487  [44800/60000]\n",
+      "loss: 1.639910  [51200/60000]\n",
+      "loss: 1.552983  [57600/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 61.4%, Avg loss: 1.552935 \n",
+      "\n",
+      "Epoch 4\n",
+      "-------------------------------\n",
+      "loss: 1.617544  [    0/60000]\n",
+      "loss: 1.584900  [ 6400/60000]\n",
+      "loss: 1.431853  [12800/60000]\n",
+      "loss: 1.497028  [19200/60000]\n",
+      "loss: 1.398104  [25600/60000]\n",
+      "loss: 1.374862  [32000/60000]\n",
+      "loss: 1.395106  [38400/60000]\n",
+      "loss: 1.311979  [44800/60000]\n",
+      "loss: 1.344943  [51200/60000]\n",
+      "loss: 1.260497  [57600/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 63.5%, Avg loss: 1.273861 \n",
+      "\n",
+      "Epoch 5\n",
+      "-------------------------------\n",
+      "loss: 1.351240  [    0/60000]\n",
+      "loss: 1.332739  [ 6400/60000]\n",
+      "loss: 1.168934  [12800/60000]\n",
+      "loss: 1.264685  [19200/60000]\n",
+      "loss: 1.156166  [25600/60000]\n",
+      "loss: 1.166853  [32000/60000]\n",
+      "loss: 1.190275  [38400/60000]\n",
+      "loss: 1.123630  [44800/60000]\n",
+      "loss: 1.159197  [51200/60000]\n",
+      "loss: 1.093173  [57600/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 64.9%, Avg loss: 1.100579 \n",
+      "\n",
+      "Epoch 6\n",
+      "-------------------------------\n",
+      "loss: 1.173738  [    0/60000]\n",
+      "loss: 1.173800  [ 6400/60000]\n",
+      "loss: 0.995219  [12800/60000]\n",
+      "loss: 1.120712  [19200/60000]\n",
+      "loss: 1.005070  [25600/60000]\n",
+      "loss: 1.027016  [32000/60000]\n",
+      "loss: 1.064497  [38400/60000]\n",
+      "loss: 1.003921  [44800/60000]\n",
+      "loss: 1.039441  [51200/60000]\n",
+      "loss: 0.988730  [57600/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 66.0%, Avg loss: 0.988927 \n",
+      "\n",
+      "Epoch 7\n",
+      "-------------------------------\n",
+      "loss: 1.051198  [    0/60000]\n",
+      "loss: 1.072171  [ 6400/60000]\n",
+      "loss: 0.876195  [12800/60000]\n",
+      "loss: 1.025504  [19200/60000]\n",
+      "loss: 0.909833  [25600/60000]\n",
+      "loss: 0.928650  [32000/60000]\n",
+      "loss: 0.981854  [38400/60000]\n",
+      "loss: 0.925937  [44800/60000]\n",
+      "loss: 0.956951  [51200/60000]\n",
+      "loss: 0.918648  [57600/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 67.4%, Avg loss: 0.913117 \n",
+      "\n",
+      "Epoch 8\n",
+      "-------------------------------\n",
+      "loss: 0.961284  [    0/60000]\n",
+      "loss: 1.002846  [ 6400/60000]\n",
+      "loss: 0.791129  [12800/60000]\n",
+      "loss: 0.958888  [19200/60000]\n",
+      "loss: 0.846923  [25600/60000]\n",
+      "loss: 0.856896  [32000/60000]\n",
+      "loss: 0.923112  [38400/60000]\n",
+      "loss: 0.873983  [44800/60000]\n",
+      "loss: 0.897334  [51200/60000]\n",
+      "loss: 0.868079  [57600/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 68.5%, Avg loss: 0.858796 \n",
+      "\n",
+      "Epoch 9\n",
+      "-------------------------------\n",
+      "loss: 0.891945  [    0/60000]\n",
+      "loss: 0.951327  [ 6400/60000]\n",
+      "loss: 0.727679  [12800/60000]\n",
+      "loss: 0.910042  [19200/60000]\n",
+      "loss: 0.802844  [25600/60000]\n",
+      "loss: 0.802998  [32000/60000]\n",
+      "loss: 0.878452  [38400/60000]\n",
+      "loss: 0.838157  [44800/60000]\n",
+      "loss: 0.852824  [51200/60000]\n",
+      "loss: 0.829304  [57600/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 69.8%, Avg loss: 0.817811 \n",
+      "\n",
+      "Epoch 10\n",
+      "-------------------------------\n",
+      "loss: 0.836581  [    0/60000]\n",
+      "loss: 0.910066  [ 6400/60000]\n",
+      "loss: 0.678162  [12800/60000]\n",
+      "loss: 0.872824  [19200/60000]\n",
+      "loss: 0.769706  [25600/60000]\n",
+      "loss: 0.761670  [32000/60000]\n",
+      "loss: 0.842702  [38400/60000]\n",
+      "loss: 0.811824  [44800/60000]\n",
+      "loss: 0.818374  [51200/60000]\n",
+      "loss: 0.798109  [57600/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 71.0%, Avg loss: 0.785331 \n",
+      "\n",
+      "Done!\n"
      ]
     }
    ],
@@ -192,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1687261c",
+   "id": "edb11df3",
    "metadata": {},
    "outputs": [],
    "source": []
