--- a/02-1_Transformer_and_torchtext.ipynb
+++ b/02-1_Transformer_and_torchtext.ipynb
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4dfd197f",
+   "id": "9e455e41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e2542e0f",
+   "id": "990af903",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,8 +281,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1df9e4d9",
+   "execution_count": 15,
+   "id": "e0db6bf3",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,48 @@
       "| epoch   1 |  1400/ 2928 batches | lr 5.00 | ms/batch 333.09 | loss  6.12 | ppl   454.39\n",
       "| epoch   1 |  1600/ 2928 batches | lr 5.00 | ms/batch 331.61 | loss  6.11 | ppl   450.75\n",
       "| epoch   1 |  1800/ 2928 batches | lr 5.00 | ms/batch 335.30 | loss  6.03 | ppl   414.12\n",
-      "| epoch   1 |  2000/ 2928 batches | lr 5.00 | ms/batch 334.62 | loss  6.02 | ppl   413.49\n"
+      "| epoch   1 |  2000/ 2928 batches | lr 5.00 | ms/batch 334.62 | loss  6.02 | ppl   413.49\n",
+      "| epoch   1 |  2200/ 2928 batches | lr 5.00 | ms/batch 333.48 | loss  5.90 | ppl   364.17\n",
+      "| epoch   1 |  2400/ 2928 batches | lr 5.00 | ms/batch 343.97 | loss  5.97 | ppl   392.83\n",
+      "| epoch   1 |  2600/ 2928 batches | lr 5.00 | ms/batch 336.93 | loss  5.96 | ppl   385.99\n",
+      "| epoch   1 |  2800/ 2928 batches | lr 5.00 | ms/batch 325.26 | loss  5.88 | ppl   358.10\n",
+      "-----------------------------------------------------------------------------------------\n",
+      "| end of epoch   1 | time: 1017.82s | valid loss  5.85 | valid ppl   347.11\n",
+      "-----------------------------------------------------------------------------------------\n",
+      "| epoch   2 |   200/ 2928 batches | lr 4.75 | ms/batch 327.26 | loss  5.87 | ppl   353.38\n",
+      "| epoch   2 |   400/ 2928 batches | lr 4.75 | ms/batch 319.75 | loss  5.85 | ppl   348.97\n",
+      "| epoch   2 |   600/ 2928 batches | lr 4.75 | ms/batch 323.21 | loss  5.68 | ppl   291.97\n",
+      "| epoch   2 |   800/ 2928 batches | lr 4.75 | ms/batch 321.29 | loss  5.71 | ppl   300.90\n",
+      "| epoch   2 |  1000/ 2928 batches | lr 4.75 | ms/batch 318.98 | loss  5.66 | ppl   286.50\n",
+      "| epoch   2 |  1200/ 2928 batches | lr 4.75 | ms/batch 343.93 | loss  5.68 | ppl   294.38\n",
+      "| epoch   2 |  1400/ 2928 batches | lr 4.75 | ms/batch 337.94 | loss  5.69 | ppl   296.43\n",
+      "| epoch   2 |  1600/ 2928 batches | lr 4.75 | ms/batch 332.10 | loss  5.72 | ppl   304.96\n",
+      "| epoch   2 |  1800/ 2928 batches | lr 4.75 | ms/batch 384.57 | loss  5.66 | ppl   286.95\n",
+      "| epoch   2 |  2000/ 2928 batches | lr 4.75 | ms/batch 500.34 | loss  5.67 | ppl   291.44\n",
+      "| epoch   2 |  2200/ 2928 batches | lr 4.75 | ms/batch 778.34 | loss  5.56 | ppl   259.24\n",
+      "| epoch   2 |  2400/ 2928 batches | lr 4.75 | ms/batch 943.82 | loss  5.65 | ppl   284.12\n",
+      "| epoch   2 |  2600/ 2928 batches | lr 4.75 | ms/batch 956.15 | loss  5.65 | ppl   283.13\n",
+      "| epoch   2 |  2800/ 2928 batches | lr 4.75 | ms/batch 696.31 | loss  5.58 | ppl   266.18\n",
+      "-----------------------------------------------------------------------------------------\n",
+      "| end of epoch   2 | time: 1647.87s | valid loss  5.64 | valid ppl   281.96\n",
+      "-----------------------------------------------------------------------------------------\n",
+      "| epoch   3 |   200/ 2928 batches | lr 4.51 | ms/batch 780.41 | loss  5.61 | ppl   272.89\n",
+      "| epoch   3 |   400/ 2928 batches | lr 4.51 | ms/batch 1017.21 | loss  5.62 | ppl   277.23\n",
+      "| epoch   3 |   600/ 2928 batches | lr 4.51 | ms/batch 1015.35 | loss  5.43 | ppl   227.25\n",
+      "| epoch   3 |   800/ 2928 batches | lr 4.51 | ms/batch 687.48 | loss  5.49 | ppl   242.29\n",
+      "| epoch   3 |  1000/ 2928 batches | lr 4.51 | ms/batch 517.43 | loss  5.44 | ppl   231.30\n",
+      "| epoch   3 |  1200/ 2928 batches | lr 4.51 | ms/batch 939.98 | loss  5.48 | ppl   240.76\n",
+      "| epoch   3 |  1400/ 2928 batches | lr 4.51 | ms/batch 746.74 | loss  5.50 | ppl   245.08\n",
+      "| epoch   3 |  1600/ 2928 batches | lr 4.51 | ms/batch 906.73 | loss  5.53 | ppl   252.82\n",
+      "| epoch   3 |  1800/ 2928 batches | lr 4.51 | ms/batch 895.14 | loss  5.47 | ppl   237.47\n",
+      "| epoch   3 |  2000/ 2928 batches | lr 4.51 | ms/batch 916.63 | loss  5.49 | ppl   243.10\n",
+      "| epoch   3 |  2200/ 2928 batches | lr 4.51 | ms/batch 622.35 | loss  5.37 | ppl   214.06\n",
+      "| epoch   3 |  2400/ 2928 batches | lr 4.51 | ms/batch 461.92 | loss  5.47 | ppl   236.71\n",
+      "| epoch   3 |  2600/ 2928 batches | lr 4.51 | ms/batch 474.33 | loss  5.48 | ppl   240.54\n",
+      "| epoch   3 |  2800/ 2928 batches | lr 4.51 | ms/batch 469.15 | loss  5.41 | ppl   223.67\n",
+      "-----------------------------------------------------------------------------------------\n",
+      "| end of epoch   3 | time: 2278.97s | valid loss  5.64 | valid ppl   282.12\n",
+      "-----------------------------------------------------------------------------------------\n"
      ]
     }
    ],
@@ -328,10 +369,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fabe5eee",
+   "id": "b1abd68f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_loss = evaluate(best_model, test_data)\n",
+    "test_ppl = math.exp(test_loss)\n",
+    "print('=' * 89)\n",
+    "print(f'| End of training | test loss {test_loss:5.2f} | '\n",
+    "      f'test ppl {test_ppl:8.2f}')\n",
+    "print('=' * 89)"
+   ]
   }
  ],
  "metadata": {
